--- a/src/main/resources/static/myStyleSheet.css
+++ b/src/main/resources/static/myStyleSheet.css
@@ -1,34 +1,72 @@
-/*.container{*/
-/*    clear:both;*/
-/*    overflow:auto;*/
-/*}*/
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 
-/*nav{*/
-/*    float:right;*/
-/*    margin-right: 50px;*/
-/*}*/
+.titleStyle {
+    color: #ff0000;
+    font-size: 18px;
+    font-weight: bolder;
+    -webkit-text-stroke: 0.05vw rgb(255, 134, 67);
+}
 
+.cursor {
+    cursor: pointer;
+}
 
+.marginTop {
+    margin-top: 50px;
+}
 
-/*.logo img{*/
-/*    float:left;*/
-/*}*/
+.modalTextColor {
+    color: #d0662d;
+}
 
-/*ul li{*/
-/*    display: inline-block; padding:10px;*/
-/*    font-size:20px;*/
-/*    margin-right: 40px;*/
-/*    margin-top: 20px;*/
-/*}*/
-/*ul li a {*/
-/*    color: #1d2f4e;*/
-/*    text-decoration: none;*/
-/*}*/
+.tfontColor {
+    color: white!important;
+}
 
-/*ul li:visited{*/
-/*    color: #1d2f4e;*/
-/*    text-decoration: none;*/
-/*}*/
+.stroke {
+    -webkit-text-stroke: 0.04vw rgba(255, 196, 0, 0.5);
+}
+
+.bgBody {
+    background: #fbe3b7;
+}
+
+.bgImg {
+    background-image: url("/images/pasta.jpeg")!important;
+}
+
+.profileImg {
+    width: 200px;
+    height: 200px;
+}
+
+.logoTitle {
+    color: white;
+    font-weight: bolder;
+    font-family: 'Noto Serif Display', serif;
+    font-size: 25px!important;
+}
+
+.tabFont {
+    /*font-family: 'Varela Round', sans-serif;*/
+    font-family: 'Irish Grover', cursive;
+    font-size: 25px!important;
+}
+
+.mainMenuFont {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px!important;
+}
+
+.pt-5 {
+    padding-top: 2px;
+}
 
 .left{
     float: left;
@@ -42,6 +80,42 @@
     text-align: center;
     width: 50%;
     height: 150px;
+}
+
+.transbox {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background: rgba(255, 196, 0, 0.3);
+    border-radius: 50px;
+}
+
+.transbox2 {
+    font-family: 'Source Code Pro', monospace;
+    -webkit-text-stroke: 0.02vw #a26b00;
+    font-size: 20px;
+    padding: 25px;
+    /*background: rgba(251, 209, 183, 1.0);*/
+    border-radius: 50px;
+}
+
+.transbox p {
+    font-weight: bold;
+    color: #000000;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 22px;
+}
+
+/*User history*/
+.transbox2 div > span {
+    color: #c00000;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 22px;
+}
+
+.profileText {
+    padding: 5px;
+    font-family: 'sans-serif', sans-serif!important;
+    font-size: 20px;
 }
 
 .boxCenter{
@@ -74,7 +148,7 @@
 }
 
 .txt-tabs {
-    color: #0dcaf0;
+    color: #adeeff;
 }
 
 .btn-edit {
@@ -85,69 +159,73 @@
     padding: 0;
 }
 
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+p-5 {
+    padding-top: 5%;
 }
 
-/* Modal Content */
-.modal-content {
-    background-color: #fde590;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
+/*.modal {*/
+/*    display: none; !* Hidden by default *!*/
+/*    position: fixed; !* Stay in place *!*/
+/*    z-index: 0; !* Sit on top *!*/
+/*    padding-top: 100px; !* Location of the box *!*/
+/*    left: 0;*/
+/*    top: 0;*/
+/*    width: 100%; !* Full width *!*/
+/*    height: 100%; !* Full height *!*/
+/*    overflow: auto; !* Enable scroll if needed *!*/
+/*    background-color: rgb(0,0,0); !* Fallback color *!*/
+/*    background-color: rgba(0,0,0,0.4); !* Black w/ opacity *!*/
+/*}*/
 
-/* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-.close1 {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
+/*!* Modal Content *!*/
+/*.modal-content {*/
+/*    background-color: #fde590;*/
+/*    margin: 0 auto;*/
+/*    padding: 20px;*/
+/*    border: 1px solid #888;*/
+/*    width: 80%;*/
+/*}*/
 
-.close2 {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
+/*!* The Close Button *!*/
+/*.close {*/
+/*    color: #aaaaaa;*/
+/*    float: right;*/
+/*    font-size: 28px;*/
+/*    font-weight: bold;*/
+/*}*/
+/*.close1 {*/
+/*    color: #aaaaaa;*/
+/*    float: right;*/
+/*    font-size: 28px;*/
+/*    font-weight: bold;*/
+/*}*/
 
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-.close1:hover,
-.close1:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
+/*.close2 {*/
+/*    color: #aaaaaa;*/
+/*    float: right;*/
+/*    font-size: 28px;*/
+/*    font-weight: bold;*/
+/*}*/
 
-.close2:hover,
-.close2:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
+/*.close:hover,*/
+/*.close:focus {*/
+/*    color: #000;*/
+/*    text-decoration: none;*/
+/*    cursor: pointer;*/
+/*}*/
+/*.close1:hover,*/
+/*.close1:focus {*/
+/*    color: #000;*/
+/*    text-decoration: none;*/
+/*    cursor: pointer;*/
+/*}*/
+
+/*.close2:hover,*/
+/*.close2:focus {*/
+/*    color: #000;*/
+/*    text-decoration: none;*/
+/*    cursor: pointer;*/
+/*}*/
 
 .loginContainer{
     width: 200px;
@@ -199,3 +277,5 @@
     text-align: center;
 
 }
+
+.datepicker{ z-index:5000 !important; }
