--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -1,31 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-<!--    <link rel="stylesheet" type= "text/css" href="../../static/myStyleSheet.css">-->
-    <link th:rel="stylesheet" th:href="@{/myStyleSheet.css} "/>
-    <title>Login</title>
+    <title>Login | Recipe Book</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="/bootstrap.css">
+    <link rel="stylesheet" href="/myStyleSheet.css">
+    <link rel="stylesheet" href="/login.css">
 
 </head>
 <body>
-<div class="container bg-primary">
-    <div class="d-flex justify-content-center h-100">
-        <div class="card m-3">
-    <label for="uname">Username</label>
-    <br>
-    <input type="text" id="uname"  name="uname" required>
-    <br><br>
-    <label for="psw">Password</label>
-    <br>
-    <input type="password" id="psw" name="psw" required>
-    <br><br>
-    <button type="submit">Login</button>
-    <br><br>
-    <form action="/register" class="d-flex justify-content-center">
-        <input type="submit" value="Register">
-    </form>
+<section class="ftco-section">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center mb-5">
+                <h2 class="tfontColor titleFont stroke">Recipe Book</h2>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-4">
+                <div class="login-wrap py-5">
+                    <div class="img d-flex align-items-center justify-content-center" style="background-image: url(https://gist.githubusercontent.com/cyberant28/c1372e491e9e06db5c85a91977b142af/raw/6a05f1b63d492c83a54d80f78796103b99e1bf2a/userOnPc.svg);"></div>
+                    <h3 class="text-center mb-0">Welcome</h3>
+                    <p class="text-center">Sign in by entering the information below</p>
+                    <form action="#" class="login-form">
+                        <div class="form-group">
+                            <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-user"></span></div>
+                            <input type="text" class="form-control" placeholder="Username" required>
+                        </div>
+                        <div class="form-group">
+                            <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-lock"></span></div>
+                            <input type="password" class="form-control" placeholder="Password" required>
+                        </div>
+                        <div class="form-group d-md-flex">
+                            <div class="w-100 text-md-right">
+                                <a href="#">Forgot Password</a>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn form-control btn-primary rounded submit px-3">Get Started</button>
+                        </div>
+                    </form>
+                    <div class="w-100 text-center mt-4 text">
+                        <p class="mb-0">Don't have an account?</p>
+                        <a href="#">Sign Up</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</section>
+
+<script src="/jquery.min.js"></script>
+<script src="/popper.js"></script>
+<script src="/bootstrap.min.js"></script>
+<script src="/main.js"></script>
+
 </body>
 </html>
+
