--- a/src/main/resources/templates/index/search.html
+++ b/src/main/resources/templates/index/search.html
@@ -1,25 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type= "text/css" href="/myStyleSheet.css">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Datepicker in Bootstrap Modal Demo</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/datepicker.css">
+    <style>
+        h1{
+            margin-top: 20px;
+        }
+        .container, h1{
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
-
 <div class="container">
-    <nav>
-        <ul>
-            <li><a href="/favorites">Favorites</a></li>
-            <li><a href="/recipeBook">Recipe book</a></li>
-            <li><a href="/listOfRecipes">List of recipes</a></li>
-            <li><a href="/planner">Planner</a></li>
-            <li><a href="/search" >Search</a></li>
-            <li><a href="/home">Profile</a></li>
-            <li><a href="/">Logout</a></li>
-        </ul>
-    </nav>
+    <h1>Datepicker in Bootstrap Modal Example</h1>
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-target="#modal" data-toggle="modal">
+        Launch the demo
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modal" role="dialog" aria-labelledby="modalLabel" tabindex="-1">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Datepicker</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" style="height: 1000px;">
+                    <input type="text" class="form-control" data-toggle="datepicker">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<h1>search</h1>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+<script src="/datepicker.js"></script>
+<script>
+    $(function() {
+        $('[data-toggle="datepicker"]').datepicker({
+            autoHide: true,
+            zIndex: 2048,
+        });
+    });
+</script>
 </body>
 </html>
